--- a/styles/globals.css
+++ b/styles/globals.css
@@ -108,6 +108,11 @@ a {
   color: inherit;
   text-decoration: none;
 }
+button:disabled{
+  background-color: #ddd;
+  color: #444;
+  cursor: not-allowed;
+}
 
 @media (prefers-color-scheme: dark) {
   html {
